<resources>
    <string name="klp_alert_title" translatable="false">klp_alert_title</string>
    <string name="klp_angle_not_correct" translatable="false">klp_angle_not_correct</string>
    <string name="klp_cancel" translatable="false">klp_cancel</string>
    <string name="klp_cancel_button" translatable="false">klp_cancel_button</string>
    <string name="klp_capture_note" translatable="false">klp_capture_note</string>
    <string name="klp_check_nfc_text" translatable="false">klp_check_nfc_text</string>
    <string name="klp_check_permission_camera" translatable="false">klp_check_permission_camera</string>
    <string name="klp_check_permission_camera_title" translatable="false">klp_check_permission_camera_title</string>
    <string name="klp_demo_confirm" translatable="false">klp_confirm</string>
    <string name="klp_create_camera_error" translatable="false">klp_create_camera_error</string>
    <string name="klp_done_title" translatable="false">klp_done_title</string>
    <string name="klp_error_happen" translatable="false">klp_error_happen</string>
    <string name="klp_error_network" translatable="false">klp_error_network</string>
    <string name="klp_error_nfc_card_lost_connection" translatable="false">klp_error_nfc_card_lost_connection</string>
    <string name="klp_error_nfc_not_enabled" translatable="false">klp_error_nfc_not_enabled</string>
    <string name="klp_error_nfc_wrong_id_card" translatable="false">klp_error_nfc_wrong_id_card</string>
    <string name="klp_error_service_temporary_down" translatable="false">klp_error_service_temporary_down</string>
    <string name="klp_error_unknown_short" translatable="false">klp_error_unknown_short</string>
    <string name="klp_guide_button" translatable="false">klp_guide_button</string>
    <string name="klp_guide_nfc_1" translatable="false">klp_guide_nfc_1</string>
    <string name="klp_guide_nfc_2" translatable="false">klp_guide_nfc_2</string>
    <string name="klp_guide_nfc_3" translatable="false">klp_guide_nfc_3</string>
    <string name="klp_guide_nfc_4" translatable="false">klp_guide_nfc_4</string>
    <string name="klp_guide_nfc_position_1" translatable="false">klp_guide_nfc_position_1</string>
    <string name="klp_guide_nfc_position_2" translatable="false">klp_guide_nfc_position_2</string>
    <string name="klp_guide_passport" translatable="false">klp_guide_passport</string>
    <string name="klp_guide_passport_1" translatable="false">klp_guide_passport_1</string>
    <string name="klp_guide_passport_2" translatable="false">klp_guide_passport_2</string>
    <string name="klp_guide_passport_3" translatable="false">klp_guide_passport_3</string>
    <string name="klp_guide_passport_4" translatable="false">klp_guide_passport_4</string>
    <string name="klp_guide_reject_1" translatable="false">klp_guide_reject_1</string>
    <string name="klp_guide_reject_2" translatable="false">klp_guide_reject_2</string>
    <string name="klp_guide_reject_3" translatable="false">klp_guide_reject_3</string>
    <string name="klp_guide_reject_title" translatable="false">klp_guide_reject_title</string>
    <string name="klp_guide_title" translatable="false">klp_guide_title</string>
    <string name="klp_guide_liveness_closer_face" translatable="false">klp_guide_liveness_closer_face</string>
    <string name="klp_guide_liveness_no_face" translatable="false">klp_guide_liveness_no_face</string>
    <string name="klp_instruction" translatable="false">klp_instruction</string>
    <string name="klp_leave_confirm_content" translatable="false">klp_leave_confirm_content</string>
    <string name="klp_leave_confirm_title" translatable="false">klp_leave_confirm_title</string>
    <string name="klp_liveness_error_timeout" translatable="false">klp_liveness_error_timeout</string>
    <string name="klp_liveness_guide_title" translatable="false">klp_liveness_guide_title</string>
    <string name="klp_liveness_look_straight" translatable="false">klp_liveness_look_straight</string>
    <string name="klp_liveness_processing_failed" translatable="false">klp_liveness_processing_failed</string>
    <string name="klp_liveness_processing_finish" translatable="false">klp_liveness_processing_finish</string>
    <string name="klp_liveness_tiltleft" translatable="false">klp_liveness_tiltleft</string>
    <string name="klp_liveness_tiltright" translatable="false">klp_liveness_tiltright</string>
    <string name="klp_liveness_too_close" translatable="false">klp_liveness_too_close</string>
    <string name="klp_liveness_too_far" translatable="false">klp_liveness_too_far</string>
    <string name="klp_liveness_too_many_faces" translatable="false">klp_liveness_too_many_faces</string>
    <string name="klp_liveness_turndown" translatable="false">klp_liveness_turndown</string>
    <string name="klp_liveness_turnleft" translatable="false">klp_liveness_turnleft</string>
    <string name="klp_liveness_turnright" translatable="false">klp_liveness_turnright</string>
    <string name="klp_liveness_turnup" translatable="false">klp_liveness_turnup</string>
    <string name="klp_message_nfc_ready" translatable="false">klp_message_nfc_ready</string>
    <string name="klp_next_btn" translatable="false">klp_next_btn</string>
    <string name="klp_nfc_antenna_title" translatable="false">klp_nfc_antenna_title</string>
    <string name="klp_nfc_authentication" translatable="false">klp_nfc_authentication</string>
    <string name="klp_nfc_common_error" translatable="false">klp_nfc_common_error</string>
    <string name="klp_nfc_connection_error" translatable="false">klp_nfc_connection_error</string>
    <string name="klp_nfc_hold_still" translatable="false">klp_nfc_hold_still</string>
    <string name="klp_nfc_invalid_mrz" translatable="false">klp_nfc_invalid_mrz</string>
    <string name="klp_nfc_more_one_tag_found" translatable="false">klp_nfc_more_one_tag_found</string>
    <string name="klp_nfc_read_successfully" translatable="false">klp_nfc_read_successfully</string>
    <string name="klp_nfc_request_present" translatable="false">klp_nfc_request_present</string>
    <string name="klp_nfc_start_button" translatable="false">klp_nfc_start_button</string>
    <string name="klp_nfc_tag_not_valid" translatable="false">klp_nfc_tag_not_valid</string>
    <string name="klp_nfc_title" translatable="false">klp_nfc_title</string>
    <string name="klp_no" translatable="false">klp_no</string>
    <string name="klp_not_support_nfc" translatable="false">klp_not_support_nfc</string>
    <string name="klp_passport_guide_1" translatable="false">klp_passport_guide_1</string>
    <string name="klp_passport_guide_2" translatable="false">klp_passport_guide_2</string>
    <string name="klp_passport_title" translatable="false">klp_passport_title</string>
    <string name="klp_please_wait" translatable="false">klp_please_wait</string>
    <string name="klp_renew_nfc" translatable="false">klp_renew_nfc</string>
    <string name="klp_retry_btn" translatable="false">klp_retry_btn</string>
    <string name="klp_scan_back_document" translatable="false">klp_scan_back_document</string>
    <string name="klp_scan_mrz" translatable="false">klp_scan_mrz</string>
    <string name="klp_timeout_body" translatable="false">klp_timeout_body</string>
    <string name="klp_title_liveness_detection" translatable="false">klp_title_liveness_detection</string>
    <string name="klp_title_passport" translatable="false">klp_title_passport</string>
    <string name="klp_toggle_flash_error" translatable="false">klp_toggle_flash_error</string>
    <string name="klp_upload_passport" translatable="false">klp_upload_passport</string>
    <string name="klp_yes" translatable="false">klp_yes</string>
    <string name="klp_active" translatable="false">klp_active</string>
    <string name="klp_dev_desc" translatable="false">klp_dev_desc</string>
    <string name="klp_enter_amount" translatable="false">klp_enter_amount</string>
    <string name="klp_enter_content" translatable="false">klp_enter_content</string>
    <string name="klp_enter_destination" translatable="false">klp_enter_destination</string>
    <string name="klp_index_background_color" translatable="false">klp_index_background_color</string>
    <string name="klp_index_button_text_color" translatable="false">klp_index_button_text_color</string>
    <string name="klp_index_environment" translatable="false">klp_index_environment</string>
    <string name="klp_index_language" translatable="false">klp_index_language</string>
    <string name="klp_index_main_color" translatable="false">klp_index_main_color</string>
    <string name="klp_index_main_text_color" translatable="false">klp_index_main_text_color</string>
    <string name="klp_index_scenario" translatable="false">klp_index_scenario</string>
    <string name="klp_miss_account_destination" translatable="false">klp_miss_account_destination</string>
    <string name="klp_miss_transfer" translatable="false">klp_miss_transfer</string>
    <string name="klp_next" translatable="false">klp_next</string>
    <string name="klp_passive" translatable="false">klp_passive</string>
    <string name="klp_prod_desc" translatable="false">klp_prod_desc</string>
    <string name="klp_save_setting_title" translatable="false">klp_save_setting_title</string>
    <string name="klp_semi_active" translatable="false">klp_semi_active</string>
    <string name="klp_start" translatable="false">klp_start</string>
    <string name="klp_guide_liveness_further_face" translatable="false">klp_guide_liveness_further_face</string>
    <string name="klp_emulator_warning_body" translatable="false">klp_emulator_warning_body</string>
    <string name="klp_warning_title" translatable="false">klp_warning_title</string>
    <string name="klp_passport_guide_title" translatable="false">klp_passport_guide_title</string>
    <string name="klp_title_mrz" translatable="false">klp_title_mrz</string>
    <string name="tv_instruction" translatable="false">tv_instruction</string>
    <string name="klp_liveness_eye_closes" translatable="false">klp_liveness_eye_closes</string>
    <string name="klp_scan_front_document" translatable="false">klp_scan_front_document</string>
    <string name="klp_title_front">Front side of ID card</string>
    <string name="klp_title_back">Back side of ID card</string>
    <string name="klp_title_selfie">Take a selfie</string>
    <string name="klp_subtitle_liveness">Please keep your face clearly visible, neither too far nor too close and follow below instructions</string>
    <string name="klp_title_liveness">Liveness detection</string>
    <string name="klp_subtitle_selfie">Please keep your face clearly visible,\nneither too far nor too close</string>
    <string name="klp_subtitle_front">Keep your card clearly visible inside the camera view</string>
    <string name="klp_subtitle_back">Keep your card clearly visible inside the camera view</string>
    <string name="klp_subtitle_passport">Keep your passport clearly visible inside the camera view</string>
    <string name="klp_btn_recapture">Retake photo</string>
    <string name="klp_btn_use_photo">Use this photo</string>
    <string name="klp_error_invalid_template">Invalid type</string>
    <string name="klp_error_missing_corner">Card has missing corners</string>
    <string name="klp_title_confirm">Confirmation</string>
    <string name="klp_subtitle_confirm">Please verify the information below is correct\nand edit if necessary</string>
    <string name="klp_field_name">Full Name</string>
    <string name="klp_field_gender">Gender</string>
    <string name="klp_field_male">Male</string>
    <string name="klp_field_female">Female</string>
    <string name="klp_field_id_number">ID number</string>
    <string name="klp_field_id_type">Card type</string>
    <string name="klp_field_id_passport">Pasport number</string>
    <string name="klp_field_dob">Date of birth</string>
    <string name="klp_field_doi">Date of issue</string>
</resources>