<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/klp_transparent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/popup_container"
        android:backgroundTint="@color/colorWhite"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="14dp"
            android:text="⚠️"
            android:textSize="@dimen/klp_shinhan_title_17"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="1dp"
            android:background="@color/ekyc_grey" />

        <ImageView
            android:id="@+id/iv_dialog_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:src="@drawable/sad_face"
            android:visibility="gone" />

        <TextView
            android:id="@+id/custom_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginVertical="10dp"
            android:text="@string/klp_error_happen"
            android:textAlignment="center"
            android:textSize="@dimen/klp_shinhan_title_22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/custom_dialog_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/klp_error_network"
            android:textAlignment="center"
            android:textColor="@color/black80"
            android:textSize="@dimen/klp_txt_size_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/custom_dialog_btn_no"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/margin_xxsmall"
                android:layout_weight="1"
                android:background="@drawable/border_button_only"
                android:backgroundTint="@color/black"
                android:text="@string/klp_cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/klp_shinhan_title_17"
                android:textColor="@color/black_txt" />

            <Button
                android:id="@+id/custom_dialog_btn_yes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_xxsmall"
                android:layout_weight="1"
                android:background="@drawable/border_button_solid"
                android:backgroundTint="@color/mainColor"
                android:text="@string/klp_demo_confirm"
                android:textSize="@dimen/klp_shinhan_title_17"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>