<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/klp_nfc_antenna_title"
            android:textSize="@dimen/klp_txt_size_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ll_description_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/klp_margin_mid"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check" />

            <TextView
                android:id="@+id/tv_klp_guide_nfc_position_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxsmall"
                android:text="@string/klp_guide_nfc_position_1"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_description_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_xxsmall"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_description_1">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check" />

            <TextView
                android:id="@+id/tv_klp_guide_nfc_position_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xxsmall"
                android:text="@string/klp_guide_nfc_position_2"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

        </LinearLayout>


        <ImageView
            android:id="@+id/iv_nfc_position"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wv_height"
            android:layout_marginVertical="@dimen/klp_margin_mid"
            android:src="@drawable/sample_position"
            app:layout_constraintBottom_toTopOf="@id/btn_understand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_description_2"
            app:layout_constraintVertical_bias="0.505" />

        <TextView
            android:id="@+id/text_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/klp_margin_mid"
            android:gravity="center"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/klp_shinhan_text_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_nfc_position" />

        <Button
            android:id="@+id/btn_understand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/margin_side"
            android:background="@drawable/border_button_only"
            android:text="@string/klp_cancel_button"
            android:textColor="@color/white"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textSize="@dimen/klp_shinhan_title_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>